add ses functions, email verification functions
